--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>This is EY Edunet program 1</h1>
     <h2>This is EY Edunet program 2</h2>
-    <h3>This is EY Edunet program 3</h3>
-    <h4>This is EY Edunet program 4</h4>
-    <h5>This is EY Edunet program 5</h5>
-    <h6>This is EY Edunet program 6</h6>
+    <h3 align="center">This is EY Edunet program 3</h3>
+    <h4 align="center">This is EY Edunet program 4</h4>
+    <h5 align="right">This is EY Edunet program 5</h5>
+    <h6 align="right">This is EY Edunet program 6</h6>
 </body>
 </html>
